--- a/ui/alkatechcrm/public/index.html
+++ b/ui/alkatechcrm/public/index.html
@@ -6,14 +6,29 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body >
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+<style>
+  body {
+    font-family: 'Montserrat';font-size: 16px;
+}
+#s-input-file__BV_file_outer_ > label {
+    /* font-size: 17px !important; */
+}
+.vs__selected-options input.vs__search {
+    line-height: 1.66;
+}
+.custom-scroll{
+  overflow-y: scroll !important;
+  max-height: 480px;
+}
+</style>
