subscriber status update, delete, and update AND template management with crud and tiny editor integration

--- a/ui/alkatechcrm/public/index.html
+++ b/ui/alkatechcrm/public/index.html
@@ -31,4 +31,17 @@
   overflow-y: scroll !important;
   max-height: 480px;
 }
+.fa-smile{
+  color: forestgreen;
+}
+/* subscriber page */
+
+.btn-primary:not(:disabled):not(.disabled).active {
+    background: #14045e !important;
+}
+label.btn.btn-primary:hover {
+    box-shadow: -1px 1px 2px 3px #14045e;
+    box-shadow: inset -4px -5px 20px 20px #14045e;
+}
+
 </style>
